[BACK] - (기능추가) : 디비 연동 완료 - (리팩토링) : 회원가입 jwt 사용 - (이슈상황) : /register 라우팅 실패

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "minwook",
-    "password": "test_minwook",
+    "password": "testminwook",
     "database": "mz",
     "host": "127.0.0.1",
     "dialect": "mysql"
